--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <tittle>Document</tittle>
-    <link rel="stylesheet" href="style.css">
-      </head>
-  <body>
-    <h1>av.versionamento</h1>
-  </body>
-</html> 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1><av.versionamento</h1>
+</body>
+</html>
